fixed svg sizing on mobile

--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -82,6 +82,10 @@
   display: flex;
   justify-content: center;
   margin-bottom: 40px;
+
+  svg {
+    height: 100%
+  }
 }
 
 .section-container {
